# ff-projections

./: .gitignore  README.md  pyproject.toml
docs/: BACKLOG.md  data_dictionary.md  projection_contract.md
nfl_proj/availability/: models.py
nfl_proj/backtest/: as_of.py  consensus_comparison.py  error_decomposition.py  harness.py  metrics.py  pipeline.py  worst_misses.py
nfl_proj/data/: coaches.py  college_stats.py  games_overrides.py  loaders.py  rookie_grades.py  rookie_matching.py  team_assignment.py
nfl_proj/efficiency/: models.py
nfl_proj/gamescript/: models.py
nfl_proj/opportunity/: depth_chart.py  depth_chart_history.py  models.py
nfl_proj/play_calling/: models.py
nfl_proj/player/: breakout.py  qb.py  qb_coupling.py  qb_coupling_categorical.py  qb_coupling_ridge.py
reports/: breakout_integration_validation.md  consensus_comparison.md  error_decomposition.md  phase8b_summary.md  phase8c_part1_postmortem.md  phase8c_part2_postmortem.md  phase8c_part2_session_state.md  phase8c_part3_postmortem.md  qb_coupling_integration_validation.md  qb_situation_integration_validation.md  rookie_integration_validation.md  worst_misses_2024.md
scripts/: bootstrap_data.py  breakout_diagnostic.py  breakout_integration_validation.py  build_qb_depth_charts.py  dashboard.py  export_season_projections.py  qb_coupling_integration_validation.py  qb_coupling_smoke.py  qb_situation_integration_validation.py  refresh_projections.py  rookie_integration_validation.py  run_backtest.py
specs/: phase8c_followup_prompt.md  phase8c_part0_5_rookie_integration_prompt.md
(+35 files in other folders)
