[project]
name = "nfl-proj"
version = "0.1.0"
description = "Season-long NFL fantasy football projection model with point-in-time backtesting"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Data sources
    "nflreadpy>=0.1.5",
    # DataFrames + storage
    "polars>=1.0.0",
    "pyarrow>=16.0.0",
    "duckdb>=1.0.0",
    "pandas>=2.2.0",          # only for sklearn/statsmodels bridges
    # Modeling
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.0",
    "lightgbm>=4.5.0",
    "numpy>=1.26.0,<3.0.0",
    "scipy>=1.13.0",
    # Config + IO
    "pydantic>=2.7.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Fuzzy name matching (prospect ↔ draft picks, Phase 8c Part 0.5)
    "rapidfuzz>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
    "marimo>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nfl_proj"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: tests requiring network access",
]
